[tool.poetry]
name = "project1_petrov_daniil_m25_555"
version = "0.1.0"
description = "Text adventure game - Treasure Labyrinth"
authors = ["Petrov Daniil <petr.dan.02@yandex.ru>"]
readme = "README.md"
packages = [
    { include = "labyrinth_game" },
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.0"

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
